Fix issue with server not aligning correctly

--- a/src/app/components/portfolio/portfolio.component.css
+++ b/src/app/components/portfolio/portfolio.component.css
@@ -14,10 +14,12 @@
 
 .left__item {
   width: 550px;
+  height: 100%;
   margin: auto;
 }
 
 .right__item {
   width: 550px;
+  height: 100%;
   margin: auto;
 }
